# qdrant_vsql

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: ci.yml  publish-to-pypi.yml
src/qdrant_vsql/: filtering.py
tests/: test_filtering.py
