[project]
name = "qdrant-vsql"
description = "Give Qdrant a SQL style"
authors = [
  { name="Raul Carlomagno", email="rcarlomagno@gmail.com" }  
]
keywords = ["qdrant", "vector", "search", "sql"]
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
] 
dependencies = [
  "parsimonious>=0.10.0,<1.0",
  "qdrant-client>=1.14.2,<2.0"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/raulcarlomagno/qdrant_vsql"
Repository = "https://github.com/raulcarlomagno/qdrant_vsql"
Issues = "https://github.com/raulcarlomagno/qdrant_vsql/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11.0"
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["ALL"]
ignore = ["D203", "D213"]