[project]
name = "qdrant-vsql"
dynamic = ["version"]
description = "Give Qdrant a SQL style"
authors = [
  { name="Raul Carlomagno", email="rcarlomagno@gmail.com" }  
]
keywords = ["qdrant", "vector", "search", "sql"]
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "parsimonious>=0.10.0,<1.0",
  "qdrant-client>=1.14.2,<2.0"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/raulcarlomagno/qdrant_vsql"
Repository = "https://github.com/raulcarlomagno/qdrant_vsql"
Issues = "https://github.com/raulcarlomagno/qdrant_vsql/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11.0"
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "C901", "PLR0912", "PLR0915", "ANN401", "S101", "PT006", "D103", "ANN201", "ANN001", "D104", "D100", "D102", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.setuptools_scm]
write_to = "src/qdrant_vsql/_version.py"